Copy simplelanguage's pattern and add a script.
Instead of fighting with building an uberjar (which was what I was
previously trying to do), follow sl's lead, name the actual binary
launcher like they do, and make a minimal serf shell script
which deals with classpath / truffle resource file issues.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,6 @@
   <packaging>pom</packaging>
   <modules>
     <module>language</module>
-    <module>serf</module>
+    <module>launcher</module>
   </modules>
 </project>
